--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -64,10 +64,9 @@ jobs:
 
   build-ovs-and-ovn:
     name: Build OVS and OVN
-    needs:
-      - filter
+    needs: filter
     runs-on: windows-2019
-    if: github.event_name != 'pull_request' || needs.filter.outputs.build-ovs-ovn == 'true'
+    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch' || needs.filter.outputs.build-ovs-ovn == 'true'
     steps:
       - name: Check out PTHREADS4W
         run: |
@@ -168,10 +167,9 @@ jobs:
 
   build-kube-ovn:
     name: Build Kube-OVN
-    needs:
-      - filter
+    needs: filter
     runs-on: windows-2019
-    if: github.event_name != 'pull_request' || needs.filter.outputs.build-kube-ovn == 'true'
+    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch' || needs.filter.outputs.build-kube-ovn == 'true'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
